--- a/README.org
+++ b/README.org
@@ -9,42 +9,42 @@ asks for your login name and password and logs to flow.polar.com using
 in the cookies =url.el= uses.
 
 After that you can use =M-x scrape-flow-get-training= to produce an
-=ivy= buffer which allows you to select the exercise you want to
+=completing-read= buffer which allows you to select the exercise you want to
 fetch. By default this inserts the fetched object to the current
 buffer. You can customize the action with
 =scrape-flow-get-training-action=. For example, my =init.el= has the following:
 
 #+BEGIN_SRC elisp
-(defun jogo3000/distance-to-string (distance)
-  "Convert DISTANCE in meters to readable string."
-  (-> (/ distance 1000) (number-to-string)))
+  (defun jogo3000/distance-to-string (distance)
+    "Convert DISTANCE in meters to readable string."
+    (-> (/ distance 1000) (number-to-string)))
 
-(defun scrape-flow-to-org-item (training)
-  "Insert TRAINING as 'org-mode' item."
-  (org-insert-heading-respect-content)
-  (org-insert-property-drawer)
-  (org-entry-put (point) "AIKA"
-                 (format-time-string "<%Y-%m-%d %a %H:%M>" (alist-get 'time training)))
-  (org-entry-put (point) "LAJI"
-                 (cdr (assoc (alist-get 'sport training) scrape-flow-sports-translations)))
-  (-some->> (alist-get 'distance training) jogo3000/distance-to-string
-            (org-entry-put (point) "MATKA"))
-  (-some->> (alist-get 'duration training) (scrape-flow--seconds-to-string)
-            (org-entry-put (point) "KESTO"))
-  (-some->> (alist-get 'avg-hr training) (number-to-string)
-            (org-entry-put (point) "KESKISYKE"))
-  (-some->> (alist-get 'avg-pace training) (scrape-flow--pace-to-string)
-            (org-entry-put (point) "KESKIVAUHTI"))
-  (org-entry-put (point) "SRPE"
-                 (ivy-read "Arvioi SRPE: " '("1" "2" "3" "4" "5" "6" "7" "8" "9" "10")))
-  (org-entry-put (point) "KENKÄ"
-                 (ivy-read "Mitä kenkää käytit: "
-                           (org-property-get-allowed-values (point) "KENKÄ")))
-  (org-entry-put (point) "ALUSTA"
-                 (ivy-read "Kuvaile harjoitusalusta: "
-                           (org-property-get-allowed-values (point) "ALUSTA"))))
+  (defun scrape-flow-to-org-item (training)
+    "Insert TRAINING as 'org-mode' item."
+    (org-insert-heading-respect-content)
+    (org-insert-property-drawer)
+    (org-entry-put (point) "AIKA"
+                   (format-time-string "<%Y-%m-%d %a %H:%M>" (alist-get 'time training)))
+    (org-entry-put (point) "LAJI"
+                   (cdr (assoc (alist-get 'sport training) scrape-flow-sports-translations)))
+    (-some->> (alist-get 'distance training) jogo3000/distance-to-string
+              (org-entry-put (point) "MATKA"))
+    (-some->> (alist-get 'duration training) (scrape-flow--seconds-to-string)
+              (org-entry-put (point) "KESTO"))
+    (-some->> (alist-get 'avg-hr training) (number-to-string)
+              (org-entry-put (point) "KESKISYKE"))
+    (-some->> (alist-get 'avg-pace training) (scrape-flow--pace-to-string)
+              (org-entry-put (point) "KESKIVAUHTI"))
+    (org-entry-put (point) "SRPE"
+                   (completing-read "Arvioi SRPE: " '("1" "2" "3" "4" "5" "6" "7" "8" "9" "10")))
+    (org-entry-put (point) "KENKÄ"
+                   (completing-read "Mitä kenkää käytit: "
+                             (org-property-get-allowed-values (point) "KENKÄ")))
+    (org-entry-put (point) "ALUSTA"
+                   (completing-read "Kuvaile harjoitusalusta: "
+                             (org-property-get-allowed-values (point) "ALUSTA"))))
 
-(setq scrape-flow-get-training-action 'scrape-flow-to-org-item)
+  (setq scrape-flow-get-training-action 'scrape-flow-to-org-item)
 #+END_SRC
 
 Training data is gathered into an =alist= with following structure
